--- a/test.html
+++ b/test.html
@@ -11,8 +11,8 @@
 <meta name="Robots" content="all,index,follow" /> 
 <meta name="Document-State" content="dynamic" />
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-<script src="js/jquery.jgrow-0.3.2.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery.jgrow-0.4.js" type="text/javascript"></script>
  
 <script type="text/javascript">
 	$(function() {
@@ -28,7 +28,7 @@
 </head> 
 <body>
 	
-<h1>jGrow 0.3.x-dev</h1>
+<h1>jGrow-dev</h1>
 	
 <textarea name="frmTextArea" id="frmTextArea" rows="20"></textarea>
 	
